fase 3 completed
